--- a/index.html
+++ b/index.html
@@ -65,9 +65,24 @@
         transition: fill 0.6s ease-in-out;
     }
 
-    #spacer{
-        padding-top: 3rem;
+    #spacer {
+    padding: 3rem; /* Default for desktop */
+}
+
+/* Tablet (Landscape) */
+@media (max-width: 991px) {
+    #spacer {
+        padding: 1rem; /* For tablets and similar devices */
     }
+}
+
+/* Mobile (Portrait) */
+@media (max-width: 767px) {
+    #spacer {
+        padding: 0rem; /* For mobile portrait */
+    }
+}
+
 
 </style>
 
