--- a/index.html
+++ b/index.html
@@ -9,7 +9,10 @@
 
 </head>
 
+
 <style>
+    @import url('https://fonts.googleapis.com/css2?family=Manrope:wght@200..800&family=Tenor+Sans&display=swap');
+
     * {
         margin: 0;
         padding: 0;
@@ -23,7 +26,9 @@
 
     #name {
         position: absolute;
-        font: tenorsans;
+        font-family: "Tenor Sans", sans-serif;
+        font-weight: 400;
+        font-style: normal;
         color: #29588b;
         background-color: #ebeff3;
         width: fit-content;
